Criação e estilização da pagina dos quadrantes. Também adicionei o link paras os quadrantes nos botões da pagina das salas

--- a/Dashboard/dashboard.css
+++ b/Dashboard/dashboard.css
@@ -29,7 +29,7 @@
     background-color: #ffffff;
     border-bottom: solid #8B49CD 3px;
     padding: 15px;
-    height: 15vh;
+    height: 12vh;
   }
   
   /* .header .container{
@@ -39,7 +39,7 @@
   
   .logoNav{
     width: 180px;
-    height: 50px;
+    height: 45px;
     margin-top: 30px;
     margin-left: -30px;
   }
@@ -467,3 +467,43 @@ li{
   width: 180px;
   background-color: #FFDE59;
 }
+
+.box_q {
+  width: 45%;
+  background-color: rgb(2, 12, 12);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 65%;
+}
+
+#myChart_q{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative; 
+  height: 50vh; 
+  width: 60vw;
+  margin-top: 20px;
+  margin-left: 290px
+}
+
+.guardar{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  background-color: #ffffff;
+}
+
+#media1 {
+  background-color: #C6AACD;
+  margin-left: 50px;
+}
+
+#media2 {
+  background-color:#C6AACD;
+}
+
+
