--- a/Dashboard/dashboard.css
+++ b/Dashboard/dashboard.css
@@ -28,19 +28,18 @@
   .header{
     background-color: #ffffff;
     border-bottom: solid #8B49CD 3px;
-    padding: 15px;
+    padding: 18px;
     height: 12vh;
   }
   
-  /* .header .container{
-    justify-content: space-between;
-    align-items: center;
-  } */
+  .container{
+    margin-top: -25px;
+  } 
   
   .logoNav{
     width: 180px;
     height: 45px;
-    margin-top: 30px;
+    margin-top: 40px;
     margin-left: -30px;
   }
   
@@ -160,7 +159,7 @@ button {
     width: 60px;
     height: 60px;
     margin-left: 880px;
-    margin-top: -70px;
+    margin-top: -80px;
     cursor: pointer;
     }
 
